fix: fit h1 text on smallest screen sizes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
    }
 
    .h1{ 
-    @apply text-6xl md:text-7xl
+    @apply text-5xl sm:text-6xl lg:text-7xl
    }
 
    .h2{
